# VEX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  Doxyfile  VEXConfig.cmake.in  build-linux.sh  build-windows.bat  check-deps-linux.sh  check-deps-windows.bat  debuging.txt
Engine/BuildTools/: CMakeLists.txt  build-windows.bat  projectBuilder.cpp  rebuild-buildtools-linux.sh  rebuild-buildtools-windows.bat  vpakPacker.cpp
Engine/BuildTools/BuildFiles/: CMakeLists.txt  main.cpp
Engine/BuildTools/BuildFiles/Source/: GameEntry.cpp
Engine/BuildTools/VexCrashDecoder/: CrashDecoder.cpp  CrashDecoder.hpp  main.cpp
Engine/Core/: CMakeLists.txt  rebuild-core-linux.sh  rebuild-core-windows.bat
Engine/Core/cmake/: GenerateVersion.cmake
Engine/Core/include/: Engine.hpp  VexBuildVersion.hpp.in
Engine/Core/include/components/: AudioSystem.hpp  GameInfo.hpp  ImGUIWrapper.hpp  InputSystem.hpp  JoltSafe.hpp  Mesh.hpp  PhysicsSystem.hpp  ResolutionManager.hpp  Scene.hpp  SceneManager.hpp  assetTypes.hpp  colorTypes.hpp  enviroment.hpp  errorUtils.hpp  pathUtils.hpp  types.hpp
Engine/Core/include/components/GameComponents/: AudioSourceComponent.hpp  BasicComponents.hpp  CharacterComponent.hpp  ComponentFactory.hpp  InputComponent.hpp  SerializationUtils.hpp  UiComponent.hpp
Engine/Core/include/components/GameObjects/: CameraObject.hpp  FogObject.hpp  GameObject.hpp  GameObjectFactory.hpp  LightObject.hpp  ModelObject.hpp
Engine/Core/include/components/GameObjects/Creators/: ModelCreator.hpp
Engine/Core/include/components/UI/: UIVertex.hpp  VexUI.hpp
Engine/Core/src/: Engine.cpp
Engine/Core/src/components/: AudioSystem.cpp  HardwareInfo.hpp  InputSystem.cpp  Mesh.cpp  PhysicsSystem.cpp  ResolutionManager.cpp  Scene.cpp  SceneManager.cpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp  Window.cpp  Window.hpp  errorUtils.cpp  pathUtils.cpp
Engine/Core/src/components/GameComponents/: ComponentFactory.cpp
Engine/Core/src/components/GameObjects/: GameObject.cpp  GameObjectFactory.cpp
Engine/Core/src/components/GameObjects/Creators/: ModelCreator.cpp
Engine/Core/src/components/UI/: VexUI.cpp
Engine/Core/src/components/backends/vulkan/: Interface.cpp  Interface.hpp  MeshManager.cpp  MeshManager.hpp  PhysicsDebug.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Resources.cpp  Resources.hpp  SwapchainManager.cpp  SwapchainManager.hpp  VulkanImGUIWrapper.cpp  VulkanImGUIWrapper.hpp  VulkanMesh.cpp  VulkanMesh.hpp  context.hpp  frustum.hpp  limits.hpp  uniforms.hpp
Engine/Core/src/shaders/: Debug.slang  Masked.slang  Opaque.slang  OpaqueFrag.slang  OpaqueVert.slang  Screen.slang  Transparent.slang  Ui.slang  UiFrag.slang  UiVert.slang  basic.frag  basic.vert  ui.frag  ui.vert
Engine/Core/src/shaders/depends/: math.slang  texsampler.slang  uniforms.slang
Engine/Core/src/shaders/effects/: AffineWarping.slang  ColorQuantization.slang  Crt.slang  GouraudShading.slang  NTSCArtifacts.slang  VertexJitter.slang  VertexSnapping.slang
Engine/Editor/: CMakeLists.txt  DialogWindow.cpp  DialogWindow.hpp  Editor.cpp  Editor.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorCommands.hpp  EditorImGUIWrapper.cpp  EditorImGUIWrapper.hpp  basicDialog.hpp  editorProperties.hpp  execute.hpp  main.cpp  main_selector.cpp  projectProperties.hpp  rebuild-editor-linux.sh  rebuild-editor-windows.bat
Engine/Editor/Assets/default/NewProject/: VexProject.json
Engine/Editor/Assets/default/NewProject/Assets/scenes/: main.json
Engine/Editor/Assets/default/NewProject/Source/: BasicCamera.cpp  BasicCamera.hpp
Engine/Editor/ProjectSelector/: ProjectSelector.cpp  ProjectSelector.hpp
Engine/Editor/Tools/: AssetBrowser.cpp  AssetBrowser.hpp  EditorMenuBar.cpp  EditorMenuBar.hpp  EditorWindow.hpp  PropertiesMenu.hpp  SceneMenu.hpp  worldSettingsMenu.hpp
StarterProjects/DevProject/: CMakeLists.txt  VexProject.json  buildDebug.sh  buildRelease.sh  main.cpp
StarterProjects/DevProject/Assets/: PenguinBaseMesh.mtl  SimpleSmoothSphere.fbx  SimpleSmoothSphere.mtl  SimpleSphere.fbx
docs/: AssetBrowser_8cpp_source.html  AssetBrowser_8hpp.html  AssetBrowser_8hpp.js  AssetBrowser_8hpp_source.html  AudioSourceComponent_8hpp.html  AudioSourceComponent_8hpp.js  AudioSourceComponent_8hpp_source.html  AudioSystem_8cpp_source.html  AudioSystem_8hpp.html  AudioSystem_8hpp.js  AudioSystem_8hpp_source.html  BasicCamera_8cpp_source.html  BasicCamera_8hpp_source.html  BasicComponents_8hpp.html  BasicComponents_8hpp.js  BasicComponents_8hpp_source.html  BufferTest_8cpp_source.html  Buffer_8h_source.html  CameraObject_8hpp.html  CameraObject_8hpp.js  CameraObject_8hpp_source.html  CharacterComponent_8hpp_source.html  ComponentFactory_8cpp_source.html  ComponentFactory_8hpp.html  ComponentFactory_8hpp.js  ComponentFactory_8hpp_source.html  Core_2bin_2Debug_2CMakeFiles_23_831_86_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  Core_2bin_2Debug_2CMakeFiles_23_831_86_2CompilerIdC_2CMakeCCompilerId_8c_source.html  Core_2bin_2Debug_2__deps_2zstd-src_2contrib_2pzstd_2main_8cpp_source.html  Core_2bin_2Debug_2thirdparty_2yoga_2yoga_2CMakeFiles_2__CMakeLTOTest-CXX_2src_2main_8cpp_source.html  Core_2bin_2Release_2CMakeFiles_23_831_86_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  Core_2bin_2Release_2CMakeFiles_23_831_86_2CompilerIdC_2CMakeCCompilerId_8c_source.html  Core_2bin_2Release_2thirdparty_2yoga_2yoga_2CMakeFiles_2__CMakeLTOTest-CXX_2src_2main_8cpp_source.html  DEPRECATED-test-zstd-speed_8py_source.html  Debug_2VEX_2VEX__export_8h_source.html  Debug_2__deps_2libdwarf-build_2config_8h_source.html  (+2887 more)
src/: CMakeLists.txt  main.cpp
src/components/: engine.cpp  engine.hpp  mesh.cpp  mesh.hpp  model.hpp  resolution_manager.cpp  resolution_manager.hpp  transform.hpp  window.cpp  window.hpp
src/components/backends/vulkan/: context.hpp  interface.cpp  interface.hpp  pipeline.cpp  pipeline.hpp  resources.cpp  resources.hpp  swapchain_manager.cpp  swapchain_manager.hpp  uniforms.hpp  vulkan_mesh.cpp  vulkan_mesh.hpp
src/shaders/: basic.frag  basic.vert
(+1098 files in other folders)
